# RFID_Inventory

./: .gitignore  CONTEXT.md  README.md  RFIDInventory.spec  app.py  build-windows.bat  config.py  db.py  intake.py  ocr_mistral.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  printer.py  pyproject.toml  reader.py  requirements-win7.txt  requirements.txt  scanner.py  settings.example.ini  settings.ini  sheets.py  skills-lock.json  sync.py  test.py  tsconfig.base.json
.dev-data/: web.db-wal
apps/warehouse/: RFIDInventory.spec  bol_extract.py  build-windows.bat  config.py  db.py  printer.py  pyproject.toml  reader.py  requirements.txt  rfid_inventory.py  sync.py
apps/warehouse/static/: index.html  styles.css
apps/warehouse/theme/: bg-theme.css
cloud/: README.md  __init__.py  app.py  db.py  pyproject.toml  requirements.txt  startup.sh  sync_contract.py  test_sync.py
cloud/api/: index.py
cloud/static/: cart.js  site.css
cloud/templates/: base.html  error.html  inventory.html  requests.html  tag.html
docs/: local-development.md
learn/: GLOSSARY.md  MISSION.md  RESOURCES.md
patches/: @better-auth__drizzle-adapter@1.6.18.patch
plans/: 001-scaffold-typescript-monorepo.md  002-domain-package-schema-repos-importer.md  003-reader-protocol-and-bluetooth-transport.md  004-field-app-foundation-and-checkin.md  005-label-printing-zpl.md  006-checkout-sweep-warehouse-finder.md  007-bol-capture-and-ocr.md  008-requests-staging-fulfillment.md  009-web-app-jobsite-and-office.md  010-sync-ops-import-cutover.md  011-vercel-level-local-development-dx.md  README.md
scripts/: alias-dev-turso-env.mjs  merge-vercel-env.mjs  pull-dev-env.sh  setup-dev-turso.sh  verify-dev-db.mjs  (+1 more)
(+234 files in other folders)
