# Read by Vercel at build time: it pins the Python version AND is the source
# of truth for dependencies (when pyproject.toml exists, Vercel ignores
# requirements.txt, so the list below must stay in sync with it).
# requirements.txt is kept for local runs and the Azure path.
[project]
name = "switch-warehouse-cloud"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.1",
]
